actualizar las fechas

--- a/nuestraescuelita.org/cursos.html
+++ b/nuestraescuelita.org/cursos.html
@@ -31,8 +31,12 @@
 <div class="texto">
 
 
-<p id="1" class="subpagina" align="left" > <b>EL CURSO LECTIVO 2013-2014</b></p>
-Calendario: mi&eacute;rcoles 14 de agosto del 2013 al viernes 6 de junio del 2014.
+<p id="1" class="subpagina" align="left" > <b>El curso lectivo 2015-2016</b></p>
+Calendario: Lunes 24 de Agosto del 2015 al viernes 3 de Junio del 2016.
+
+<p class="subpagina" align="left" > <b>Curso de verano 2015</b></p>
+Calendario: Lunes 22 de Junio al viernes 31 de Julio del 2015.
+
 
 <!-- --------------- Jardin ----------------->
 <br />
