actualizar el resto de las fechas en la pagina actual

--- a/nuestraescuelita.org/index.html
+++ b/nuestraescuelita.org/index.html
@@ -87,8 +87,8 @@ Para m&aacutes informaci&oacute;n sobre nuestra linda comunidad, v&eacute;ase po
 	
 
 <p align="left", style="font-size:11Pt; color:brown; font-family:sans-serif, Arial;">
-<strong>CURSOS 2013-2014</strong><br />
-V&eacute;ase <a href="documentos/Informacion_de_Inscripcion_2013-2014.pdf">Informaci&oacute;n de Inscripci&oacute;n</a>,  <a href="documentos/Contratos_de_membresia_jardin_y_preescolar_2013-2014.pdf">Contratos de Membres&iacute;a</a> y <a href="documentos/Formularios_de_inscripcion_curso_lectivo_2013-2014.pdf">Formularios de Inscripci&oacute;n</a>.
+<strong>Curso de Verano 2015 y Curso Lectivo 2015-2016</strong><br />
+Ll&aacutemanos para m&aacutes informaci&oacuten a (408)726-9074.
 </p>
 
 </td>
