quitar newline, cambiar logo

--- a/nuestraescuelita.org/v2/index.html
+++ b/nuestraescuelita.org/v2/index.html
@@ -278,11 +278,9 @@
                         <div class="nicdark_space20"></div>
 
                         <div class="nicdark_logo nicdark_marginleft10">
-                            <a href="index.html"><img alt="" src="img/logo.png"></a>
+                            <a href="index.html"><img alt="" src="img/trenLogo.png"></a>
                         </div>
 
-                        <a class="nicdark_btn_icon nicdark_zoom nicdark_bg_yellow_hover nicdark_right_sidebar_btn_open nicdark_marginright10 nicdark_bg_orange extrasmall nicdark_radius white right"><i class="icon-basket-1"></i></a>
-                        
                         <nav>
                             <ul class="nicdark_menu nicdark_margin010 nicdark_padding50">
 
@@ -296,13 +294,13 @@
                                         <li><a href="teachers.html">Participacion</a></li>
                                         <li><a href="teachers.html">Instalaciones</a></li>
                                         <li><a href="teachers.html">Preguntas</a></li>
-                                    </ul>                                <li>
+                                    </ul>                                <li>
                                 <li class="blue">
                                     <a href="courses.html">Cursos</a>
                                     <ul class="sub-menu">
                                         <li><a href="courses.html">El Jardin</a></li>
                                         <li><a href="single-course.html">Pequenos</a></li>
-                                        <li><a href="single-course.html">Grandes</a></li>                                  </ul>
+                                        <li><a href="single-course.html">Grandes</a></li>                                  </ul>
                                 </li>
                                 <li class="yellow nicdark_megamenu">
                                     <a href="#">Maestros</a>
