--- a/nuestraescuelita.org/v2/index.html
+++ b/nuestraescuelita.org/v2/index.html
@@ -51,46 +51,6 @@
 <div class="nicdark_right_sidebar nicdark_bg_greydark nicdark_nicescrool">
 
     <a class="nicdark_right_sidebar_btn_close nicdark_btn_icon small nicdark_bg_red nicdark_radius white nicdark_absolute_right10 nicdark_shadow"><i class="icon-power"></i></a>
-    
-    <!--start CART-->
-    <div class="nicdark_margin020">
-        <div class="nicdark_space20"></div>
-        <h4 class="white">YOUR CART</h4>
-        <div class="nicdark_space20"></div>
-        <div class="nicdark_divider left small"><span class="nicdark_bg_white nicdark_radius"></span></div>
-    </div>
-    <div class="nicdark_textevidence">
-        <div class="nicdark_margin20">
-            <ul class="nicdark_list nicdark_relative">
-                <li>
-                    <img alt=""  class="nicdark_absolute nicdark_radius nicdark_opacity nicdark_width60" src="img/woocommerce/small/img1.jpg">
-                    <div class="nicdark_activity nicdark_marginleft80">
-                        <h5 class="grey subtitle">BOOK CHILDREN</h5>                        
-                        <div class="nicdark_space10"></div>
-                        <p>1 x $ 254,00</p>
-                    </div>
-                    <div class="nicdark_space30"></div>
-                </li>
-                <li>
-                    <img alt=""  class="nicdark_absolute nicdark_radius nicdark_opacity nicdark_width60" src="img/woocommerce/small/img3.jpg">
-                    <div class="nicdark_activity nicdark_marginleft80">
-                        <h5 class="grey subtitle">BOOK FOR KIDS</h5>                        
-                        <div class="nicdark_space10"></div>
-                        <p>1 x $ 254,00</p>
-                    </div>
-                    <div class="nicdark_space10"></div>
-                </li>
-            </ul>
-        </div>
-    </div>
-    <div class="nicdark_margin020">
-        <h5 class="grey">SUBTOTAL: <span class="white subtitle">$ 754,00</span></h5>
-        <div class="nicdark_space20"></div>
-        <div class="nicdark_focus">
-            <a href="#" class="nicdark_btn nicdark_bg_green small nicdark_shadow nicdark_radius white"><i class="icon-basket-1"></i>&nbsp;&nbsp;VIEW CART</a>
-        </div>
-    </div>
-    <!--end CART-->
 
     <!--start FILTER-->
     <div class="nicdark_margin020">
@@ -290,11 +250,12 @@
                                 <li class="red">
                                     <a href="#">General</a>
                                     <ul class="sub-menu">
-                                        <li><a href="prices.html">Quienes Somos</a></li>
+                                        <li><a href="general.html">Quienes Somos</a></li>
                                         <li><a href="teachers.html">Participacion</a></li>
                                         <li><a href="teachers.html">Instalaciones</a></li>
                                         <li><a href="teachers.html">Preguntas</a></li>
-                                    </ul>                                <li>
+                                    </ul>
+				</li>
                                 <li class="blue">
                                     <a href="courses.html">Cursos</a>
                                     <ul class="sub-menu">
