menu link para general

--- a/nuestraescuelita.org/v2/general.html
+++ b/nuestraescuelita.org/v2/general.html
@@ -250,12 +250,12 @@
                                     <a href="index.html">Inicio</a>
                                 </li>
                                 <li class="red">
-                                    <a href="#">General</a>
+                                    <a href="general.html">General</a>
                                     <ul class="sub-menu">
-                                        <li><a href="general.html">Quienes Somos</a></li>
-                                        <li><a href="teachers.html">Participacion</a></li>
-                                        <li><a href="teachers.html">Instalaciones</a></li>
-                                        <li><a href="teachers.html">Preguntas</a></li>
+                                        <li><a href="general.html#quienessomos">Qui&eacute;nes Somos</a></li>
+                                        <li><a href="general.html#participacion">Participacion</a></li>
+                                        <li><a href="general.html#instalaciones">Instalaciones</a></li>
+                                        <li><a href="general.html#preguntas">Preguntas</a></li>
                                     </ul>
 				</li>
 				                                <li class="blue">
@@ -320,7 +320,24 @@
      
 </section>
 <!--end section-->
+<section class="nicdark_section">
+    <a class="anchor" id="quienessomos">foo</a>
 
+    <div class="nicdark_container nicdark_clearfix">
+        <div class="grid grid_12 nomargin nicdark_bg_white nicdark_bg_yellowdark_hover nicdark_transition nicdark_shadow nicdark_radius_left">
+            <div class="nicdark_focus">
+                <div class="nicdark_margin10">
+                    <h4 class="gray">Qui&eacute;nes Somos</h4>
+                    <div class="nicdark_space20"></div>
+<p class="gray">
+Nuestra Escuelita es un preescolar con participación de padres, independiente, privado, sin fines de lucro y sin vinculación religiosa.
+</p>
+		</div>
+            </div>
+	</div>
+    </div>
+</section>
+    
 <section class="nicdark_section nicdark_bg_yellow nicdark_shadow">
 
     <!--start nicdark_container-->
@@ -342,7 +359,6 @@
 		    </p>
                </div>
             </div>
-
         </div>
 
         <div class="grid grid_4 nomargin nicdark_bg_orange nicdark_bg_orangedark_hover nicdark_transition nicdark_shadow">
@@ -391,6 +407,7 @@ Los alumnos aprenden a través del juego, la exploración, la discusión y el de
 
 </section><!--start section-->
 <section class="nicdark_section">
+<a class="anchor" id="participacion">foo</a>
 
     <!--start nicdark_container-->
     <div class="nicdark_container nicdark_clearfix">
@@ -518,7 +535,8 @@ Los padres del programa de Jardín (de 0 a 3 años) están invitados a
 <!--end section-->
 
 <!--start section-->
-<section id="nicdark_parallax_text" class="nicdark_section nicdark_imgparallax nicdark_parallaxx_img2">
+<section class="nicdark_section nicdark_imgparallax nicdark_parallaxx_img2">
+<a class="anchor" id="instalaciones">foo</a>
 
     <div class="nicdark_filter greydark">
 
@@ -548,6 +566,7 @@ Los padres del programa de Jardín (de 0 a 3 años) están invitados a
 
 <!--start section-->
 <section class="nicdark_section">
+<a class="anchor" id="preguntas">foo</a>
 
     <!--start nicdark_container-->
     <div class="nicdark_container nicdark_clearfix">
