--- a/nuestraescuelita.org/v2/index.html
+++ b/nuestraescuelita.org/v2/index.html
@@ -248,12 +248,12 @@
                                     <a href="index.html">Inicio</a>
                                 </li>
                                 <li class="red">
-                                    <a href="#">General</a>
+                                    <a href="general.html">General</a>
                                     <ul class="sub-menu">
-                                        <li><a href="general.html">Quienes Somos</a></li>
-                                        <li><a href="teachers.html">Participacion</a></li>
-                                        <li><a href="teachers.html">Instalaciones</a></li>
-                                        <li><a href="teachers.html">Preguntas</a></li>
+                                        <li><a href="general.html#quienessomos">Qui&eacute;nes Somos</a></li>
+                                        <li><a href="general.html#participacion">Participacion</a></li>
+                                        <li><a href="general.html#instalaciones">Instalaciones</a></li>
+                                        <li><a href="general.html#preguntas">Preguntas</a></li>
                                     </ul>
 				</li>
                                 <li class="blue">
