agregar nuevas paginas

--- a/nuestraescuelita.org/v2/testimonios.html
+++ b/nuestraescuelita.org/v2/testimonios.html
@@ -269,7 +269,7 @@
                                     <a href="#">Maestros</a>
                                 </li>
                                 <li class="green">
-                                    <a href="testimonios.html">Testimonios</a>
+                                    <a href="blog-masonry.html">Testimonios</a>
                                 </li>
                                 <li class="orange">
                                     <a href="events.html">Anuncios</a>
