--- a/nuestraescuelita.org/v2/index.html
+++ b/nuestraescuelita.org/v2/index.html
@@ -8,9 +8,9 @@
  
     <meta charset="utf-8">  
     
-    <title>BABY KIDS HTML</title> <!--insert your title here-->  
-    <meta name="description" content="nicdark Framework"> <!--insert your description here-->  
-    <meta name="author" content="hyz" > <!--insert your name here-->
+    <title>Nuestra Escuelita</title> <!--insert your title here-->  
+    <meta name="description" content="Nuestra Escuelita"> <!--insert your description here-->  
+    <meta name="author" content="escuelita" > <!--insert your name here-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!--meta responsive-->
     
     <!--START CSS--> 
@@ -323,14 +323,15 @@
 		
 		<div class="grid grid_12 percentage nomargin">    
 			<div class="nicdark_textevidence center">
-			    <div class="nicdark_textevidence nicdark_width_percentage25 nicdark_bg_blue nicdark_shadow nicdark_radius_left">
+			    <div class="nicdark_textevidence nicdark_width_percentage33 nicdark_bg_blue nicdark_shadow nicdark_radius_left">
 			        <div class="nicdark_textevidence">
 			            <div class="nicdark_margin30">
-			                <h2 class="white subtitle"><a class="white" href="courses.html">COURSES</a></h2>
+			                <h2 class="white subtitle"><a class="white" href="courses.html">CURSOS</a></h2>
 			           </div>
 			            <i class="nicdark_zoom icon-pencil-2 nicdark_iconbg left extrabig blue nicdark_displaynone_ipadland nicdark_displaynone_ipadpotr"></i>
 			        </div>
 			    </div>
+			    <!--
 			    <div class="nicdark_textevidence nicdark_width_percentage25 nicdark_bg_yellow nicdark_shadow">
 			        <div class="nicdark_textevidence">
 			            <div class="nicdark_margin30">
@@ -338,19 +339,19 @@
 			           </div>
 			            <i class="nicdark_zoom icon-money-1 nicdark_iconbg left extrabig yellow nicdark_displaynone_ipadland nicdark_displaynone_ipadpotr"></i>
 			        </div>
-			    </div>
-			    <div class="nicdark_textevidence nicdark_width_percentage25 nicdark_bg_orange nicdark_shadow">
+			    </div>-->
+			    <div class="nicdark_textevidence nicdark_width_percentage33 nicdark_bg_orange nicdark_shadow">
 			        <div class="nicdark_textevidence">
 			            <div class="nicdark_margin30">
-			                <h2 class="white subtitle"><a class="white" href="events.html">EVENTS</a></h2>
+			                <h2 class="white subtitle"><a class="white" href="events.html">EVENTOS</a></h2>
 			           </div>
 			            <i class="nicdark_zoom icon-music-2 nicdark_iconbg left extrabig orange nicdark_displaynone_ipadland nicdark_displaynone_ipadpotr"></i>
 			        </div>
 			    </div>
-			    <div class="nicdark_textevidence nicdark_width_percentage25 nicdark_bg_green nicdark_shadow nicdark_radius_right">
+			    <div class="nicdark_textevidence nicdark_width_percentage33 nicdark_bg_green nicdark_shadow nicdark_radius_right">
 			        <div class="nicdark_textevidence">
 			            <div class="nicdark_margin30">
-			                <h2 class="white subtitle"><a class="white" href="teachers.html">TEACHERS</a></h2>
+			                <h2 class="white subtitle"><a class="white" href="teachers.html">MAESTROS</a></h2>
 			           </div>
 			            <i class="nicdark_zoom icon-graduation-cap-1 nicdark_iconbg left extrabig green nicdark_displaynone_ipadland nicdark_displaynone_ipadpotr"></i>
 			        </div>
